# fermata

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: adding-an-adapter-v0.md  ai-native-tongue-toolkit.md  charter-v0.md  deployability-dossier-v0.md  katas-v0.md  landscape-v0.md  local-alpha-release-checklist-v0.md  local-service-v0.md  naming-and-positioning.md  recovery-evidence-v0.md  run-bundle-contract-v0.md  runtime-api-v0.md  runtime-contract-authoring-model.md  tongue-eval-rubric-v0.md  tongue-grammar-gaps-v0.md  ugly-trace-v0.md
docs/releases/: local-alpha-v0.1.0-tag-checklist.md  local-alpha-v0.1.0.md  local-alpha-v0.1.1-tag-checklist.md  local-alpha-v0.1.1.md
examples/local-alpha/: file-scope.json  file-write-approval.json  file-write-proposal.json
references/: ai-native-tongue-seed-corpus-v0.jsonl  governed-effect-ir-v0.schema.json  tongue-golden-tests-v0.json
references/recovery-evidence-examples-v0/: local-service-run-packet-v0.json
references/recovery-evidence-templates-v0/: service-incident-report-template.json  service-reconciliation-report-template.json
references/release-approvals-v0/: local-alpha-v0.1.0-tag-approval-packet.json  local-alpha-v0.1.1-tag-approval-packet.json
references/release-candidates-v0/: local-alpha-v0.1.0-rc1.json  local-alpha-v0.1.1-rc1.json
references/run-bundle-contract-fixtures-v0/: manifest.json
scripts/: check_approval_surface.py  check_custody_mode_ir.py  check_local_alpha_release_artifacts.py  check_local_alpha_release_candidate.py  check_local_alpha_release_candidate_record.py  check_local_alpha_tag_approval_packet.py  check_local_alpha_tag_publication_preflight.py  check_local_service.py  check_package_build.py  check_recovery_evidence.py  check_recovery_evidence_example.py  check_run_bundle_contract.py  check_runtime_api.py  demonstrate_tongue_bridge.py  governed_effect_file_write_spike.py  parse_tongue_line.py  render_tongue_record.py  run_cli_smoke.py  run_tongue_golden_tests.py  validate_local_alpha.py
src/fermata/: __init__.py  cli.py  file_adapter.py  golden_checks.py  governed_effects.py  interpreter.py  local_alpha_validator.py  memory_adapter.py  network_adapter.py  policy_parser.py  runtime_api.py  runtime_core.py  runtime_ir.py  self_tests.py  service.py  service_records.py  tongue_bridge.py  tongue_parser.py  tongue_renderer.py
(+16 files in other folders)
