[project]
name = "fermata-runtime"
version = "0.1.0"
description = "A governed-effect runtime seed where agents may propose and only governed effects may commit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kenny Wang" }]
keywords = ["ai-agents", "governance", "effects", "runtime", "programming-languages"]
dependencies = []

[project.optional-dependencies]
dev = ["jsonschema>=4.0"]

[project.scripts]
fermata = "fermata.cli:main"
fermata-local-adapter-spike = "fermata.governed_effects:main"
fermata-parse-tongue = "fermata.tongue_parser:main"
fermata-render-tongue = "fermata.tongue_renderer:main"
fermata-golden-checks = "fermata.golden_checks:main"

[project.urls]
Homepage = "https://github.com/CIRWEL/fermata"
Repository = "https://github.com/CIRWEL/fermata"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
